+ class Polynomial with NUnitTests

--- a/Algorithms.Test/Algorithms.Test.csproj
+++ b/Algorithms.Test/Algorithms.Test.csproj
@@ -54,10 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlgorithmsForTasks.Test.cs" />
+    <Compile Include="Polynomial.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Settings.StyleCop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Algorithms\Algorithms.csproj">
