--- a/Algorithms.Test/Algorithms.Test.csproj
+++ b/Algorithms.Test/Algorithms.Test.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Settings.StyleCop" />
     <Compile Include="SortWithDelegate.Test.cs" />
